reddit_sentiment_analyzer/deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reddit-analyzer
  labels:
    name: reddit-analyzer
    app: reddit-sentiment-analyzer
